fix:map not showing

--- a/src/Pages/Locate/Locate.css
+++ b/src/Pages/Locate/Locate.css
@@ -1,1 +1,4 @@
-#map { height: 320px; }
+#map {
+    height: 400px;
+    width: 100%;
+}
